@@ -989,10 +989,6 @@
 #define HAVE_UIBLUREFFECT_STYLE_SYSTEM_MATERIAL 1
 #endif
 
-#if PLATFORM(COCOA) && !(PLATFORM(IOS) && __IPHONE_OS_VERSION_MIN_REQUIRED < 150000)
-#define HAVE_SYSTEM_SANDBOXES_ALLOWING_TERMINATE_WITH_REASON 1
-#endif
-
 #if (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 110000 \
     || (PLATFORM(IOS) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 140000) \
     || (PLATFORM(WATCHOS) && __WATCH_OS_VERSION_MIN_REQUIRED >= 70000) \
